@startuml UnifiedTreniBuilderModel
title Diagramma unificato: Builder + Treno + Enum

' package dei builder
package treni.builder {
  class Builder {
    - codice: String
    - tipoTreno: TipoTreno
    - postiTotali: int
    - servizi: Set<ServizioTreno>
    + codice(String): Builder
    + tipo(TipoTreno): Builder
    + postiTotali(int): Builder
    + aggiungiServizio(ServizioTreno): Builder
    + servizi(ServizioTreno...): Builder
    + build(): Treno
  }

  class BuilderEconomy {
    + BuilderEconomy()
  }
  class BuilderStandard {
    + BuilderStandard()
  }
  class BuilderBusiness {
    + BuilderBusiness()
  }

  Builder <|-- BuilderEconomy
  Builder <|-- BuilderStandard
  Builder <|-- BuilderBusiness
}

' package di dominio treni
package treni {
  enum ServizioTreno <<enumeration>> {
    ALTA_VELOCITA
    RISTORAZIONE
    WIFI
    ARIA_CONDIZIONATA
    PRESE_ELETTRICHE
    SILENZIOSO
    BUSINESS_LOUNGE
  }

  enum TipoTreno <<enumeration>> {
    ECONOMY
    STANDARD
    BUSINESS
    --
    nome: String
    postiStandard: int
    velocitaMedia: double
    + getNome(): String
    + getPostiStandard(): int
    + getVelocitaMedia(): double
  }

  class Treno {
    - codice: String
    - tipoTreno: TipoTreno
    - postiTotali: int
    - servizi: Set<ServizioTreno>
    + Treno(String, TipoTreno, int, Set<ServizioTreno>)
    + getCodice(): String
    + getTipoTreno(): TipoTreno
    + getPostiTotali(): int
    + getServizi(): Set<ServizioTreno>
    + hasServizio(ServizioTreno): boolean
  }

  Treno o-- TipoTreno        : tipo
  Treno o-- "0..*" ServizioTreno  : servizi
}

' relazione di utilizzo
Builder ..> Treno : <<uses>> build()

@enduml